# easyio-lib-for-esp32

./: BOM_PCB_ESP32-DEV_rev0.html  README.md  cleanBuild.bat
01_blink/: README.md  sdkconfig
02_ledBlink/: CMakeLists.txt  Makefile  README.md  sdkconfig
02_ledBlink/main/: CMakeLists.txt  ledBlink.c
03_easyio_led/: README.md
04_GPIO_IN_OUT/: README.md
05_Task/: README.md
06_GPIO_INTR/: README.md
07_GPIO_INTR_Queue/: README.md
08_KEY/: README.md
09_TouchPad/: README.md
10_LEDc_PWM/: README.md
11_ADC/: README.md
12_DAC/: README.md
12_DAC/components/easyio_lib/: CMakeLists.txt
12_DAC/components/easyio_lib/include/: easyio.h
13_MCPWM_DC_MOTOR/: README.md
14_MCPWM_HALF_BRIDGE/: README.md
15_MCPWM_SERVO/: README.md
16_MCPWM_CAPTURE_2Timer6IO/: README.md
17_PCNT_Encoder/: README.md
17_PCNT_Encoder/components/easyio_lib/: CMakeLists.txt
17_PCNT_Encoder/components/easyio_lib/include/: easyio.h
18_RMT_IR_RX/: README.md
19_RMT_IR_RX_TX/: README.md
20_RMT_1WIRE_WS2812B/: README.md
21_UART1_TX_RX/: CMakeLists.txt  README.md
22_UART0_TX_RX_QUEUE/: README.md  sdkconfig
23_UART0_TX_RX_QUEUE_PATTERN/: README.md
23_UART0_TX_RX_QUEUE_PATTERN/components/easyio_lib/: CMakeLists.txt
23_UART0_TX_RX_QUEUE_PATTERN/components/easyio_lib/include/: easyio.h  ir_tools.h
23_UART0_TX_RX_QUEUE_PATTERN/components/easyio_lib/src/: key.c
24_UART1_RS485_FLOWCON/: README.md
25_I2C_TOOLS/: README.md
26_I2C_MPU6050/: README.md
27_I2C_AHT20/: README.md
27x1_I2C_SHT30/: README.md
27x2_I2C_PCF8563_RTC/: README.md
28_SPI_LCD_ILI9341_9488_9481_ST7735_7789_7796_HX8357C/: README.md
29_SPI_AS5047P/: README.md
30_SPI_TLE5012B/: README.md
31_SPI_LCD_I2C_TOUCH_CTP/: README.md
31_SPI_LCD_I2C_TOUCH_CTP/components/easyio_lib/: CMakeLists.txt
31_SPI_LCD_I2C_TOUCH_CTP/components/easyio_lib/include/: easyio.h  rmt_ir.h  spi_lcd.h
31_SPI_LCD_I2C_TOUCH_CTP/components/easyio_lib/src/: i2c_ctp_ftxx06_xx36.c
32_NVS/: README.md
33_FATFS_SD_CARD/: README.md
33_FATFS_SD_CARD_VFS/: Makefile  README.md
34_FATFS_SD_CARD_LCD/: README.md
35_JPG_LCD_DMA/: README.md
35x_JPG_LCD_DMA_time/: README.md  sdkconfig  sdkconfig.old
36_JPG_LCD_DMA_EFFECT/: README.md
37_JPG_LCD_DMA_SD_PHOTO_ALBUM/: README.md  sdkconfig
38_WIFI_station/: README.md  sdkconfig
39_WIFI_softAP/: README.md  sdkconfig  sdkconfig.old
40_WIFI_tcp_client/: README.md
41_WIFI_tcp_server/: CMakeLists.txt  README.md  sdkconfig
42_WIFI_udp_client/: README.md  sdkconfig
43_WIFI_udp_server/: README.md
44_WIFI_http_request/: README.md
45_WIFI_http_request_weather_cjson/: README.md
46_WIFI_http_request_weather_cjson_free_15days/: README.md  sdkconfig
47_WIFI_MQTT/: README.md  sdkconfig
48_mbedtls_sha1_md5_AES_HmacSha1_base64/: README.md
49_WIFI_MQTT_Aliyun_IOT_Platform/: README.md  sdkconfig
50_WIFI_SNTP_DeepSleep/: README.md  sdkconfig
51_WIFI_Scan/: README.md  sdkconfig
52_WIFI_SmartConfig_EspTouch_AirKiss/: README.md
53_Blufi/: CMakeLists.txt  README.md  sdkconfig
54_ETH_DHCP/: README.md  sdkconfig  sdkconfig.old
easyio_lib/: CMakeLists.txt
nmea0183_parser/: sdkconfig
(+242 files in other folders)
